--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -183,10 +183,10 @@
   <div class="modal-body">
     <table style="width:100%" class="table-responsive">
         <tr><td>Name:</td><th>{{selected.customer}}</th>
-        <!-- <td>Address:</td><th>{{selected.address}}</th> -->
+        <td>Address:</td><th>{{selected.address}}</th>
         </tr>
         <tr>
-        <!-- <td>Phone:</td><th>{{selected.phone}}</th> -->
+        <td>Phone:</td><th>{{selected.phone}}</th>
         <td>Date:</td><th>{{selected.getDate()}}</th>
         </tr>
     </table>
