report page added

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -21,6 +21,10 @@
    <div class="sidemenu_option" matToolTip="Orders">
     <p (click)="allWorks()"><mat-icon>receipt</mat-icon><i class="fa fa-angle-right" style="margin-top: 20px;">All Work</i></p>
   </div>
+
+  <div class="sidemenu_option" matToolTip="Orders">
+    <p (click)="report()"><mat-icon>account_balance</mat-icon><i class="fa fa-angle-right" style="margin-top: 20px;">Report</i></p>
+  </div>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
