--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -170,7 +170,7 @@
 
 
  <!------START OF MAKING CHARGE MODAL------>
-<!-- <ng-template #template  id="side-modal" style="padding:20px;">
+<ng-template #template  id="side-modal" style="padding:20px;">
 <div class="side-modal">
     <div class="modal-header ">
      <h3 class="modal-title ">Items</h3>
@@ -181,12 +181,12 @@
       
     </div>
   <div class="modal-body">
-    <table style="width:100%" class="table-responsive">
+    <table style="width:100%" class="table-responsive" *ngIf="selected!=null">
         <tr><td>Name:</td><th>{{selected.customer}}</th>
-         <td>Address:</td><th *ngIf ='selected.address!=null'>{{selected.address}}</th> 
+         <td>Address:</td><th >{{selected.address}}</th> 
         </tr>
         <tr>
-        <td>Phone:</td><th *ngIf ='selected.phone!=null'>{{selected.phone}}</th> 
+        <td>Phone:</td><th>{{selected.phone}}</th> 
         <td>Date:</td><th >{{selected.getDate()}}</th>
         </tr>
     </table>
@@ -221,17 +221,17 @@
              <td *ngIf="item.due!=null">{{ item.due.slice(0,item.due.indexOf('T')) }}</td>
              <td *ngIf="item.assignedTo!=null" (click)="openSelectOrAddContacts(item,contactsTemplate)" style="cursor:pointer;">{{item.assignedTo.name}}</td>
              <td *ngIf="item.assignedTo==null" (click)="openSelectOrAddContacts(item,contactsTemplate)"><button mat-button-raised>+</button></td>
-             <!--Related to image set
+             <!--Related to image set-->
              <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="50%" width="100%"></td>  
              <td *ngIf="!item.isImageSet()">    
                   <span style="color:red;" *ngIf="item.imageUploader.message">{{item.imageUploader.message}}</span>
                 <input #file type="file" accept='image/*' (change)="item.imageUploader.preview(file.files);uploadItemImage(item);" />
-                <!-- <input  type="file" accept='image/*' (change)="uploadItemImage($event,selected.id)" /> 
+                <!-- <input  type="file" accept='image/*' (change)="uploadItemImage($event,selected.id)" />  -->
                 <img [src]="selectedimage" height="60%" width="100%" *ngIf="selectedimage">
-                <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="100" class="img-thumbnail"> 
+                 <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="100" class="img-thumbnail">  -->
                 {{item.imageUploader.imgURL}}
               </td>
-             <!--End of item related image
+             <!--End of item related image-->
              <td>{{item.name}}</td>
              <td>{{item.weight}}</td>
              <td>{{item.wastage}}</td>
@@ -264,7 +264,7 @@
   </div>
 
   </div>
-</ng-template> -->
+</ng-template> 
 
 
 
@@ -337,25 +337,25 @@
             <!-- Position Column -->
             <ng-container matColumnDef="order_id">
               <th mat-header-cell *matHeaderCellDef  mat-sort-header> Order ID</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(element)"> {{element.id}} </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.id}} </td>
             </ng-container>
         
             <!-- Name Column -->
             <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(element)" > {{element.getDate()}}
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.getDate()}}
             </ng-container>
 
             <!-- Phone number -->
             <ng-container matColumnDef="phone_no">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>phone_no</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(element)"> {{element.phone}}  </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.phone}}  </td>
             </ng-container> 
         
             <!-- Weight Column -->
             <ng-container matColumnDef="totalCost">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Total cost </th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(element)"> {{money(element.total)}} </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{money(element.total)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="status">
