--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -8,12 +8,13 @@
        </div>
 
        <div class="col-md-6">
-        <mat-form-field class="example-full-width">
+        <!-- <mat-form-field class="example-full-width">
             <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker"  (dateChange)="dateChoosed($event)" placeholder="Choose a date">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-       </div>
+          </mat-form-field> -->
+          <input type="text" ngxDaterangepickerMd [(ngModel)]="selectedDate" (change)="dateChoosed($event)" class="form-control" placeholder="choose dates">
+       </div>     
     </div>
     
     <div class="row mt-5">
