login authentication added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-main-nav></app-main-nav>
+
+<div *ngIf="get_login_info();else other_content">
+    <app-main-nav></app-main-nav>
+
+</div>
+
+<ng-template #other_content>
+    <app-user-login></app-user-login>
+
+</ng-template>
