--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -337,25 +337,25 @@
             <!-- Position Column -->
             <ng-container matColumnDef="order_id">
               <th mat-header-cell *matHeaderCellDef  mat-sort-header> Order ID</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.id}} </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(element)"> {{element.id}} </td>
             </ng-container>
         
             <!-- Name Column -->
             <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.getDate()}}
+              <td mat-cell *matCellDef="let element" (click)="rowClick(element)" > {{element.getDate()}}
             </ng-container>
 
             <!-- Phone number -->
             <ng-container matColumnDef="phone_no">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>phone_no</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{element.phone}}  </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(element)"> {{element.phone}}  </td>
             </ng-container> 
         
             <!-- Weight Column -->
             <ng-container matColumnDef="totalCost">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Total cost </th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)"> {{money(element.total)}} </td>
+              <td mat-cell *matCellDef="let element" (click)="rowClick(element)"> {{money(element.total)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="status">
