--- a/src/app/order-estimation/order-estimation.component.css
+++ b/src/app/order-estimation/order-estimation.component.css
@@ -1,7 +1,9 @@
 mat-form-field {
     width: 80%;
     }
-
+    .oldgold td {
+      column-width: 10ex;
+    }
     .mat-icon {
         vertical-align: middle;
      }
