--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -369,7 +369,7 @@
                 <p *ngIf="element.status==0"><mat-icon style="color:red">info</mat-icon>Pending</p>
                 <!-- <p *ngIf="element.status==1"><mat-icon style="color:#1B81EB">history</mat-icon>Processing</p> -->
                 <p *ngIf="element.status==1"><mat-icon style="color:blue">how_to_reg</mat-icon>Assigned</p>
-                <!-- <p *ngIf="element.status==3"><mat-icon>thumb_up</mat-icon>Ready</p> -->
+                <p *ngIf="element.status==2"><mat-icon>thumb_up</mat-icon>Ready</p>
                 <p *ngIf="element.status==3"><mat-icon style="color:green">check_circle_outline</mat-icon>Completed</p>
               </td>
             </ng-container>
