--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -24,7 +24,7 @@
                                 <div  class="row"><label >Phone number</label>
                                 </div>
                                 <div  class="input-group mb-3">
-                                    <input  class="form-control" id="phone" placeholder="Phone number" type="text">
+                                    <input  class="form-control" id="phone" placeholder="Phone number" type="tel" pattern="[6-9]\\d{9}" maxlength="10">
                                     <div  class="input-group-append"><span 
                                             class="input-group-text" id="basic-addon2">
                                             <i aria-hidden="true" class="fa fa-user"></i>
