--- a/src/app/all-work/all-work.component.html
+++ b/src/app/all-work/all-work.component.html
@@ -267,9 +267,11 @@
         <mat-label>Filter</mat-label>
         <select matNativeControl required [(ngModel)]="status" (ngModelChange)="onSelectedStatus($event)">
         <!-- <select matNativeControl  (ngModelChange)="onSelectedStatus($event)"> -->
+          <option value=3>All</option>
           <option value=0>UnAssigned</option>
           <option value=1>Assigned</option>
           <option value=2>completed</option>
+          
         </select>
       </mat-form-field>
         </div>
@@ -305,7 +307,7 @@
 
               <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-                <td mat-cell *matCellDef="let element" (change)="changeStatus(element)" >
+                <td mat-cell *matCellDef="let element"  >
                   <!--List of statuses to be shown
                      0 pending - info
                      1 assigned - how_to_reg
@@ -333,7 +335,7 @@
             <!-- Date Column -->
             <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
-              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.due}}
+              <td mat-cell *matCellDef="let element" (click)="rowClick(template,element)" > {{element.getDueDate() }}</td>
             </ng-container>
 
           <!-- Name Column -->
@@ -349,26 +351,20 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header>Image</th>
 
               <td mat-cell *matCellDef="let element">
-                <ng-container *ngIf="element.image==null">
-                  <input #file type="file" accept='image/*' (change)="uploadItemImage($event,element);" />
-                  <img [src]="selectedimage" alt="">
-                </ng-container>
-
-                <ng-container *ngIf="element.image!=null">
+                <ng-container *ngIf="element.image!=null" style="object-fit: contain;">
                   <!-- {{element.image}} -->
-                  <img [src]="getImage(element)" alt="" height="15%" width="30%" (click)="swipe(element)">
+                  <img [src]="getImage(element)" alt="" style="height: 150px;width: 200px;"  (click)="swipe(element)">
                 </ng-container>
 
-                  <!-- <td *ngIf="item.isImageSet()"><img [src]="getselectedIamge(item)" height="50%" width="100%"></td>  
-                  <td *ngIf="!item.isImageSet()">    
-                       <span style="color:red;" *ngIf="item.imageUploader.message">{{item.imageUploader.message}}</span>
-                     <input #file type="file" accept='image/*' (change)="item.imageUploader.preview(file.files);uploadItemImage(item);" />
-                       <input  type="file" accept='image/*' (change)="uploadItemImage($event,selected.id)" /> --> 
-                     <!-- <img [src]="currentImage" height="60%" width="100%" *ngIf="currentImage"> -->
-                     <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="100" class="img-thumbnail"> -->
-                     <!-- {{item.imageUploader.imgURL}} -->
-                   <!-- </td>  -->
-                  <!--End of item related image-->
+                <ng-container *ngIf="element.image==null">
+                  <td *ngIf="!element.isImageSet()">     
+                     <!-- <span style="color:red;" *ngIf="element.imageUploader.message">{{element.imageUploader.message}}</span> -->
+                  <input #file type="file" accept='image/*' (change)="element.imageUploader.preview(file.files);uploadItemImage(element);" />
+        
+                  <!-- <img *ngIf="selectedimage" [src]="selectedimage" height="50%" width="80%" class="img-thumbnail"> -->
+                  {{element.imageUploader.imgURL}}
+                </td>
+                </ng-container> 
 
                 </td>
               </ng-container >
